# soem_poe32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  legacy_output.txt  sdkconfig  sdkconfig.old
components/ethernet_init/: ethernet_init.c  ethernet_init.h
docs/: IMPLEMENTATION_STATUS.md  PDO_IMPLEMENTATION.md  QUICK_REFERENCE.md  TODO.md  XeryonDrive.xml  XeryonDrive_formatted.xml  design_overview.md  fromCodesysV3p5PlcPrg.project  legacy_code_mapping.md  wsl_usb_flashing_guide.md
main/: CMakeLists.txt  acquire.cpp  acquire.h  acquire_config.h  ethernet_example_main.c  main.c  main.cpp  motor_control.cpp  motor_control.h  power_sensor.cpp  power_sensor.h  scan_patterns.cpp  scan_patterns.h  xeryon_ethercat.h  xeryon_pdo.h
